fix: use --md-typeset-color variable for links to prevent unreadable links in dark mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -16,7 +16,7 @@
 }
 
 .md-typeset a {
-    color: #000000;
+    color: var(--md-typeset-color, #000000);
     font-style: italic;
     text-decoration: underline;
 }
